# niti

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_policy/: __init__.py  decorator.py  engine.py  exceptions.py  permission.py  policy.py  result.py
src/agent_policy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent_policy.py
